--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tolgakurucay.cryptotolga">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/appicon_version_1"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/appicon_version_1"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CryptoTolga">
+        android:theme="@style/MyAppTheme">
+
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
