--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/MyAppTheme">
-
+        android:theme="@style/Theme.CryptoTolga">
         <activity
-            android:name=".view.MainActivity"
-            android:exported="true"
-            android:theme="@style/MyAppTheme.NoActionBar">
+            android:name=".view.EntryActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
+        </activity>
+
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
