--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 
+
+
 buildscript {
     ext.kotlin_version = '1.6.20-RC'
     ext.kotlin_version = "1.6.10"
@@ -8,6 +10,7 @@ buildscript {
 
         google()
         mavenCentral()
+        gradlePluginPortal()
         jcenter()
 
 
@@ -19,16 +22,24 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         def nav_version = "2.4.1"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.14.0'
 
     }
 }
-
 
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
+
+
+
+
+
+
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
